# rhdh-skill

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
commands/: analyze-overlay-pr.md  triage-overlay-prs.md
rhdh_plugin/: __init__.py  __main__.py  cli.py  config.py  formatters.py  todo.py  worklog.py
scripts/: rhdh-plugin
skills/create-backend-plugin/: SKILL.md
skills/create-backend-plugin/scripts/: scaffold.py
skills/create-frontend-plugin/: SKILL.md
skills/create-frontend-plugin/scripts/: scaffold.py
skills/create-plugin/references/: backend.md  wiring.md
skills/create-plugin/scripts/: export-plugin.py  scaffold.py
skills/export-and-package/: SKILL.md
skills/generate-frontend-wiring/: SKILL.md
skills/jira-structure/: SKILL.md
skills/konflux-tekton-updates/: SKILL.md
skills/local-testing/: SKILL.md
skills/overlay/: SKILL.md
skills/overlay/workflows/: doctor.md  (+5 more)
skills/rhdh/: SKILL.md
skills/rhdh-jira/: SKILL.md
skills/rhdh-jira-structure/: SKILL.md
skills/rhdh-local/: SKILL.md
skills/rhdh-plugin/: SKILL.md
skills/rhdh-pr-review/: SKILL.md
skills/rhdh-test-plan-review/: SKILL.md
skills/skill-maker/: SKILL.md
tests/: conftest.py
tests/e2e/: test_cli.py
tests/unit/: test_claude_md.py  test_config.py  test_jira_structure_skill.py  test_local_commands.py  test_local_core.py  test_marketplace.py  test_skill_structure.py  test_todo.py  test_worklog.py  test_workspace.py
(+65 files in other folders)
